--- a/zitaocai-portfolio-nextjs/package.json
+++ b/zitaocai-portfolio-nextjs/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.2",
+    "next": "^14.2.2",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.1.0"
   },
   "devDependencies": {
