--- a/zitaocai-portfolio-nextjs/package.json
+++ b/zitaocai-portfolio-nextjs/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-multi-carousel": "^2.8.5",
     "react-type-animation": "^3.2.0",
     "resend": "^3.2.0"
   },
